Various Java 17 usages, renamed some things to match official mappings (world -> level, tile entity -> block entity).